--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -70,18 +70,21 @@
     	font-size: 18px;
     }
 	}
-	.operation-zan.active{
+	.operation-zan.active,.operation-zan:hover{
 		background: #e85749;
+		.es-transition;
 	}
 	.operation-share:hover{
 		background: #83d460;
 		.es-transition;
 	}
-	.operation-collection.active{
+	.operation-collection.active,.operation-collection:hover{
 		background: #53c3f5;
+		.es-transition;
 	}
 	.operation-code:hover{
 		background: #ff8a0c;
+		.es-transition;
 	}
 
 }
