--- a/web/assets/v2/css/main-orange.css
+++ b/web/assets/v2/css/main-orange.css
@@ -13868,6 +13868,7 @@ textarea {
   bottom: 0;
   width: 100%;
   height: 100%;
+  z-index: 9999;
   background-color: rgba(0, 0, 0, 0.9);
 }
 .open-course-mask .mask-content {
