--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -227,6 +227,7 @@
 		bottom: 0;
 		width: 100%;
 		height: 100%;
+		z-index: 9999;
 		background-color: rgba(0, 0, 0, .9);
 		.mask-content {
 			position: absolute;
