--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-search-clause-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-search-clause-modal.html.twig
@@ -15,17 +15,17 @@
       <p>1.2{{'您同意：EduSoho开放云有权随时对本服务条款及相应的服务规则内容进行单方面的变更，并有权以消息推送、网页公告等方式予以公布，而无需另行单独通知您；若您在本服务条款内容公告变更后继续使用本服务的，表示您已充分阅读、理解并接受修改后的协议内容，也将遵循修改后的条款内容使用本服务；若您不同意修改后的服务条款，您应立即停止使用本服务。'|trans}}</p>
       <h5>2.{{'服务内容'|trans}}</h5>
       <p>2.1{{'本服务为您的EduSoho网校提供以下内容的搜索功能：'|trans}}</p>
-      <p>（一）{{'课程相关信息；'|trans}}</p>
-      <p>（二）{{'老师相关信息；'|trans}}</p>
-      <p>（三）{{'小组话题和班级话题相关信息；'|trans}}</p>
-      <p>（四）{{'网校资讯相关信息。'|trans}}</p>
+      <p>{{'（一）课程相关信息；'|trans}}</p>
+      <p>{{'（二）老师相关信息；'|trans}}</p>
+      <p>{{'（三）小组话题和班级话题相关信息；'|trans}}</p>
+      <p>{{'（四）网校资讯相关信息。'|trans}}</p>
       <p>{{'您的学员可以通过本服务在您的EduSoho网校内搜索上述四类信息。'|trans}}</p>
       <h5>3.{{'您的权利和义务'|trans}}</h5>
       <p>3.1{{'您理解并同意，EduSoho开放云收集您网校内以下信息：'|trans}}</p>
-      <p>（一）{{'课程相关信息（包括：课程标题、课程副标题、课程简介、适合人群、课程目标、课时标题、课时摘要等信息）；'|trans}}</p>
-      <p>（二）{{'老师相关信息（包括：老师昵称、老师简介等信息）；'|trans}} </p>
-      <p>（三）{{'小组话题和班级话题相关信息（包括：话题标题、话题内容、话题发布时间等信息）；'|trans}}</p>
-      <p>（四）{{'网校资讯相关信息（包括：资讯标题、资讯内容、资讯发布时间等信息）。</p>
+      <p>{{'（一）课程相关信息（包括：课程标题、课程副标题、课程简介、适合人群、课程目标、课时标题、课时摘要等信息）；'|trans}}</p>
+      <p>{{'（二）老师相关信息（包括：老师昵称、老师简介等信息）；'|trans}} </p>
+      <p>{{'（三）小组话题和班级话题相关信息（包括：话题标题、话题内容、话题发布时间等信息）；'|trans}}</p>
+      <p>{{'（四）网校资讯相关信息（包括：资讯标题、资讯内容、资讯发布时间等信息）。</p>
       <p>上述四类信息仅用于为您的EduSoho网校提供搜索服务。'|trans}}</p>
       <h5>4.{{'EduSoho开放云的权利和义务'|trans}}</h5>
       <p>4.1{{'EduSoho开放云承诺对您网校的课程相关信息、老师相关信息、小组话题和班级话题相关、资讯相关信息采取对外保密措施，不向第三方披露这些信息，不授权第三方使用这些信息，除非：'|trans}}</p>
