--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/key.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/key.html.twig
@@ -53,7 +53,7 @@
     {% elseif info.error|default(null) == 'error' %}
       {{'网络问题，无法连接到EduSoho开放云平台，暂时无法获取信息'|trans}}
     {% else %}
-      {{'尚未购买套餐'|trans}}，{{'点击'|trans}}<a href="http://www.edusoho.com/services/price?type=price" target="_blank">{{'这里'|trans}}</a>{{'了解详情'|trans}}
+      {{'尚未购买套餐，点击'|trans}}<a href="http://www.edusoho.com/services/price?type=price" target="_blank">{{'这里'|trans}}</a>{{'了解详情'|trans}}
     {% endif %}
 
     <div class="page-header clearfix">
