--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-search-reapply-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-search-reapply-modal.html.twig
@@ -1,14 +1,14 @@
 {% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
 
-{% block title %}确定重建索引？{% endblock %}
+{% block title %}{{'确定重建索引？'|trans}}{% endblock %}
 
 {% block body %}
   <form id="search-clause-form" class="form-horizontal" method="post" action="{{ path('admin_edu_cloud_search_reapply') }}">
     <div class="item">
-      <h3 class="text-center">风险提示</h3>
-      <p>1.重建索引完成后会覆盖之前的搜索数据；<br>
-        2.索引在重建时需要大约30分钟的时间；<br>
-        3.在重建索引期间不影响云搜索功能正常使用；</p>
+      <h3 class="text-center">{{'风险提示'|trans}}</h3>
+      <p>1.{{'重建索引完成后会覆盖之前的搜索数据；'|trans}}<br>
+        2.{{'索引在重建时需要大约30分钟的时间；'|trans}}<br>
+        3.{{'在重建索引期间不影响云搜索功能正常使用；'|trans}}</p>
     </div>
 
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
@@ -16,6 +16,6 @@
 {% endblock %}
 
 {% block footer %}
-  <button id="search-clause-form" data-submiting-text="正在提交" type="submit" class="btn btn-primary pull-right" data-toggle="form-submit" data-target="#search-clause-form">确定</button>
-  <button type="button" class="btn btn-link pull-right" data-dismiss="modal">取消</button>
+  <button id="search-clause-form" data-submiting-text="{{'正在提交'|trans}}" type="submit" class="btn btn-primary pull-right" data-toggle="form-submit" data-target="#search-clause-form">{{'确定'|trans}}</button>
+  <button type="button" class="btn btn-link pull-right" data-dismiss="modal">{{'取消'|trans}}</button>
 {% endblock %}
