--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/key-update.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/key-update.html.twig
@@ -33,7 +33,7 @@
     <div class="controls col-md-6">
       <button type="submit" class="btn btn-primary save-btn" data-loading-text="{{'正在保存，请稍等'|trans}}...">{{'保存'|trans}}</button>
       <div class="alert alert-info mtl" role="alert">
-        请谨慎更换授权码。如有疑问请联系官方客服
+        {{'请谨慎更换授权码。如有疑问请联系官方客服'|trans}}
       </div>
       {% if not setting('storage.cloud_key_applied') %}
         <span class="pull-right"><span class="text-info">{{'还没有授权码?'|trans}}</span> <a href="javascript:;" id="key-apply-btn" class="btn btn-sm btn-warning" data-url="{{ path('admin_setting_cloud_key_apply') }}" data-goto-url="{{ path('admin_setting_cloud_key') }}"  data-loading-text="{{'正在申请授权码，请稍等...'|trans}}">{{'申请授权码'|trans}}</a></span>
