--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
@@ -16,11 +16,11 @@
         </script>
         <script charset="utf-8" src="http://wpa.b.qq.com/cgi/wpa.php"></script>
         <p style="text-align: center;font-size:16px">
-          短信发送服务由EduSoho教育云提供 <a href="http://open.edusoho.com/educloud"  target="_blank">了解详情</a>
+          {{'短信发送服务由EduSoho教育云提供'|trans}} <a href="http://open.edusoho.com/educloud"  target="_blank">{{'了解详情'|trans}}</a>
         </p>
 
         <p style="text-align:center;font-size:16px">
-          当前版本为试⽤版, 不能进行短信服务设置。如需购买授权版,请联系销售人员。 电话：0571-86819929 或
+          {{'当前版本为试⽤版, 不能进行短信服务设置。如需购买授权版,请联系销售人员。 电话：'|trans}}0571-86819929 {{'或'|trans}}
           <span id="BizQQWPA" onclick="_hmt.push(['_trackEvent', 'advisory', 'click', 'qq'])">
             <a id="BizQQWPA"  href="javascript:" style='text-decoration:none;'>QQ：800023860 </a>。
           </span>
@@ -55,48 +55,48 @@
                   id="sms-controller-form" novalidate="">
 
               {% if (smsStatus.sms_enabled|default('0') == '0' or smsStatus.status|default('error') == 'error') and accessCloud|default(0) != 0 %}
-                <span>短信签名：
+                <span>{{'短信签名：'|trans}}
                   {% if not smsStatus.sms_school_name|default(null) %}
-                    <input class="form-control" type="text" name="sms_school_name" placeholder="签名3-8字，建议使用汉字">
+                    <input class="form-control" type="text" name="sms_school_name" placeholder="{{'签名3-8字，建议使用汉字'|trans}}">
                   {% else %}
                     {{ smsStatus.sms_school_name }}
                   {% endif %}
                  </span>
-                <button name="sms-open" class="btn btn-primary">启用云短信</button>
+                <button name="sms-open" class="btn btn-primary">{{'启用云短信'|trans}}</button>
               {% elseif smsStatus.sms_enabled|default('0') == '1' and smsStatus.sms_school_name|default(null) != "" and  smsStatus.status != 'error' %}
                 <div name="status">
-                  <span class="text-success">已启用</span>
+                  <span class="text-success">{{'已启用'|trans}}</span>
                   <button class="btn btn-default btn-sm mlm" name="sms-close">
-                    <span class="text-muted">关闭</span>
+                    <span class="text-muted">{{'关闭'|trans}}</span>
                   </button>
-                  <p><span>短信签名：{{ smsStatus.sms_school_name }}</span> <a href="javascript:;" name="sign-update">修改</a></p>
+                  <p><span>{{'短信签名：'|trans}}{{ smsStatus.sms_school_name }}</span> <a href="javascript:;" name="sign-update">{{'修改'|trans}}</a></p>
                 </div>
                 <div name="submit-sign" hidden="hidden">
                 <span>
-                  短信签名：
-                  <input class="form-control" type="text" name="sms_school_name" placeholder="签名3-8字，建议使用汉字"
+                  {{'短信签名：'|trans}}
+                  <input class="form-control" type="text" name="sms_school_name" placeholder="{{'签名3-8字，建议使用汉字'|trans}}"
                          style="width:250px">
                 </span>
-                  <button class="btn btn-primary mlm mrm">提交</button>
-                  <span><a href="{{ path('admin_edu_cloud_sms') }}">取消</a></span>
+                  <button class="btn btn-primary mlm mrm">{{'提交'|trans}}</button>
+                  <span><a href="{{ path('admin_edu_cloud_sms') }}">{{'取消'|trans}}</a></span>
                   <span class="glyphicon glyphicon-question-sign text-muted" id="article-property-tips17"
                         data-toggle="tooltip" data-placement="bottom" href="javascript:" data-original-title=""></span>
                   <div id="article-property-tips17-html" style="display:none;">
                     <div style="width:250px;font-size:14px;">
-                      <span style="color:blue;"> 哪些签名不允许：</span><br>
-                      1.含有特殊字符（如$@^等）的签名 <br>
-                      2.与公司，商标和网站名无关的签名
+                      <span style="color:blue;"> {{'哪些签名不允许：'|trans}}</span><br>
+                      {{'1.含有特殊字符（如$@^等）的签名'|trans}} <br>
+                      {{'2.与公司，商标和网站名无关的签名'|trans}}
                     </div>
                   </div>
                 </div>
               {% elseif smsStatus.status|default(null) == 'error' or accessCloud|default(0) == 0 %}
                 <div class="row">
                   <div class="col-md-2">
-                    <button name="email-open" class="btn btn-primary" disabled="disabled">启用云短信</button>
+                    <button name="email-open" class="btn btn-primary" disabled="disabled">{{'启用云短信'|trans}}</button>
                   </div>
                   <div class="col-md-10">
-                    <span class="text-danger text-sm">抱歉，您尚未接入教育云，不能使用云短信服务！</span>
-                    <p><a href="http://open.edusoho.com/educloud" target="_blank">立即接入</a></p>
+                    <span class="text-danger text-sm">{{'抱歉，您尚未接入教育云，不能使用云短信服务！'|trans}}</span>
+                    <p><a href="http://open.edusoho.com/educloud" target="_blank">{{'立即接入'|trans}}</a></p>
                   </div>
                 </div>
               {% endif %}
@@ -104,7 +104,7 @@
             </form>
             {% if smsStatus.sms_enabled|default('0') != '1' %}
               <div class="help-block">
-                云短信提供高效、可靠的短信发送服务，低至0.055元/条，点击<a href="http://open.edusoho.com/show/cloud/sms" target="_blank">这里</a>了解详情
+                {{'云短信提供高效、可靠的短信发送服务，低至0.055元/条，点击'|trans}}<a href="http://open.edusoho.com/show/cloud/sms" target="_blank">{{'这里'|trans}}</a>{{'了解详情'|trans}}
               </div>
             {% endif %}
           </div>
