date-search-fix

--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/layout.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/layout.html.twig
@@ -15,18 +15,18 @@
 				<label for="endDate">截止日期</label>
 				<input class="form-control" type="text" id="endTime" name="endTime" value="{{dateRange.endTime}}" placeholder="结束时间">
 			 </div>
-		 	<button class="btn btn-default btn-data-range {% if app.request.query.get('date-range','week') ==  'day'%}active {% endif %}"type="button" id="btn-yesterday-range" data-type= "day" data-start="{{dateRange.yesterdayStart}}" data-end="{{dateRange.yesterdayEnd}}">昨天</button>
-		 	<button class="btn btn-default btn-data-range {% if app.request.query.get('date-range','week') ==  'week'%}active {% endif %}" type="button" id="btn-lastWeek-range" data-type= "week"  data-start="{{dateRange.lastWeekStart}}" data-end="{{dateRange.lastWeekEnd}}">最近七天</button>
-			<button class="btn btn-default btn-data-range {% if app.request.query.get('date-range','week') ==  'month'%}active {% endif %}" type="button" id="btn-lastMonth-range" data-type= "month"  data-start="{{dateRange.lastMonthStart}}" data-end="{{dateRange.lastMonthEnd}}">最近30天</button>
+		 	<button class="btn btn-default btn-data-range {% if app.request.query.get('date-range') == 'day'%}active {% endif %}"type="button" id="btn-yesterday-range" data-type= "day" data-start="{{dateRange.yesterdayStart}}" data-end="{{dateRange.yesterdayEnd}}">昨天</button>
+		 	<button class="btn btn-default btn-data-range {% if app.request.query.get('date-range') == 'week'%}active {% endif %}" type="button" id="btn-lastWeek-range" data-type= "week"  data-start="{{dateRange.lastWeekStart}}" data-end="{{dateRange.lastWeekEnd}}">最近七天</button>
+			<button class="btn btn-default btn-data-range {% if app.request.query.get('date-range') == 'month'%}active {% endif %}" type="button" id="btn-lastMonth-range" data-type= "month"  data-start="{{dateRange.lastMonthStart}}" data-end="{{dateRange.lastMonthEnd}}">最近30天</button>
 			<input name="date-range" type="hidden">
 		  	<button class="btn btn-primary" type="submit">搜索</button>
 		</form>
 	{% endblock form %}
 
 	<div class="btn-group mbm" role="group" aria-label="...">
-	  <a class="btn btn-default {% if nav  == 'referer' %}active{% endif %}" href="{{path('admin_opencourse_analysis_referer_summary')}}" role="button">来源分析</a>
-	  <a class="btn btn-default {% if nav == 'conversion' %}active{% endif %}" href="{{path('admin_opencourse_analysis_conversion')}}" role="button">购买转化分析</a>
-	  <a class="btn btn-default {% if nav|default('') == 'watch' %}active{% endif %}" href="{{path('admin_opencourse_analysis_referer_watch_statistics')}}" role="button">观看统计</a>
+	  <a class="btn btn-default {% if nav  == 'referer' %}active{% endif %}" href="{{path('admin_opencourse_analysis_referer_summary',{startTime:app.request.get('startTime'),endTime:app.request.get('endTime'),'date-range':app.request.get('date-range')})}}" role="button">来源分析</a>
+	  <a class="btn btn-default {% if nav == 'conversion' %}active{% endif %}" href="{{path('admin_opencourse_analysis_conversion',{startTime:app.request.get('startTime'),endTime:app.request.get('endTime'),'date-range':app.request.get('date-range')})}}" role="button">购买转化分析</a>
+	  <a class="btn btn-default {% if nav|default('') == 'watch' %}active{% endif %}" href="{{path('admin_opencourse_analysis_referer_watch_statistics',{startTime:app.request.get('startTime'),endTime:app.request.get('endTime'),'date-range':app.request.get('date-range')})}}" role="button">观看统计</a>
 	</div>
 
 	{% block analysis_content %}
