--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/list.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/list.html.twig
@@ -9,10 +9,9 @@
       <table class="table table-hover">
         <thead>
         <tr>
-          <th width="40%">课程名称</th>
-          <th>访问数</th>
-          <th>购买转化数</th>
-          <th>购买转化率</th>
+          <th width="40%">公开课名称</th>
+          <th width="20%">访问数</th>
+          <th width="40%">详情</th>
         </tr>
         </thead>
         <tbody>
@@ -30,13 +29,10 @@
             <th scope="row">{{ openCourses[refererLog.targetId].title }}</th>
             <th>
               {{ hitNum }} 次
+            </th>
+            <th>
               <a href="javascript:;" data-toggle="modal" data-target="#modal"
                  data-url="{{ path('admin_opencourse_analysis_referer_detail',{id:refererLog.targetId, startTime:dateRange.startTime,endTime:dateRange.endTime}) }}">来源和转化详情</a>
-            </th>
-            <th>{{ orderCount }} 次</th>
-            <th>
-              {% if refererLog and orderCount and hitNum %}{{ (orderCount / hitNum * 100)|number_format(2,'.') }} {% else %} 0 {% endif %}
-              %
             </th>
           </tr>
         {% else %}
