--- a/src/Topxia/WebBundle/Resources/views/Course/create.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/create.html.twig
@@ -30,7 +30,7 @@
           </div>
           {% if setting('course.live_course_enabled') %}
             <div class="col-md-3">
-              <div class="course-select" data-type="live">
+              <div class="course-select disabled" data-type="live">
                 <i class="es-icon es-icon-zhibokecheng "></i>
                 <div class="course-type">直播课程</div>
                 <div class="course-intro">纯直播形式教学的完整课程</div>
