--- a/web/assets/v2/css/plugin/homework.css
+++ b/web/assets/v2/css/plugin/homework.css
@@ -441,7 +441,7 @@ a.homework-essay-textarea-pack-up {
   font-size: 100%;
 }
 .quality-switcher-control {
-  margin: 10px 0 10px 20px;
+  margin: 10px 0;
   display: none;
 }
 .quality-switcher-control-open {
