referer-log-order-fix

--- a/src/Topxia/AdminBundle/Resources/views/Course/course-recommend-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Course/course-recommend-tr.html.twig
@@ -18,7 +18,9 @@
     <br>
     <span class="text-muted text-sm">分类：{{ category.name|default('--') }}</span>
   </td>
-  {% include 'OrgBundle:Org/Parts:table-body-td.html.twig' with {orgCode: course.orgCode}%}
+  {% if course.type not in ['open','liveOpen'] %}
+    {% include 'OrgBundle:Org/Parts:table-body-td.html.twig' with {orgCode: course.orgCode}%}
+  {% endif %}
   <td>
     {{ admin_macro.user_link(user) }}
     <br>
