--- a/web/assets/v2/css/main-blue.css
+++ b/web/assets/v2/css/main-blue.css
@@ -14188,6 +14188,7 @@ textarea {
 .panel-create-course .course-select.disabled {
   border: 0px;
   color: #d9d7d7;
+  cursor: help;
 }
 .panel-create-course .course-select.active {
   background-color: #0081e6;
