--- a/src/Topxia/WebBundle/Resources/views/OpenCourseManage/open-course-manage-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourseManage/open-course-manage-header.html.twig
@@ -38,6 +38,7 @@
     {% endif %}
     <div class="btn-group">
       <a class="btn btn-default btn-sm" href="{{ path('open_course_show',{courseId:course.id,as:'preview'}) }}" target="_blank">预览</a>
+      <a class="btn btn-default btn-sm" href="{{ path('open_course_show',{courseId:course.id,as:'wxpreview'}) }}" target="_blank">微信预览</a>
     </div>
   </div>
 </div>
