--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-header.html.twig
@@ -37,7 +37,7 @@
     
   </div>
 {% elseif course.type == 'liveOpen' %}
-  <div class="col-md-9 open-course-views">
+  <div class="open-course-views">
     <img class="img-responsive" src="/assets/img/default/open-course-bg.jpg" alt="" style="height:100%;">
     <div class="mask">
       {% if lesson.startTime > ("now"|date("U")) %}
