--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -100,6 +100,11 @@
 .openCourse-container{
 	padding: 0;
 }
+.openCourse-wechat-preview{
+	.openCourse-container{
+		width: 740px;
+	}
+}
 .openCourse-panel{
 	margin: 15px 0;
 	border-color: transparent;
