--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -100,9 +100,25 @@
 .openCourse-container{
 	padding: 0;
 }
-.openCourse-wechat-preview{
-	.openCourse-container{
-		width: 740px;
+.openCourse-wechat-preview .openCourse-container{
+	max-width: 740px;
+	.openCourse-wechat-qrcode{
+		position: absolute;
+    right: 300px;
+    top: 300px;
+    .qrcode-popover .qrcode-content {
+    	 display: block \9;
+      .es-transform(1,1);
+      .opacity(1);
+      img{
+      	width: 120px;
+      	height: 120px;
+      	margin-bottom: 10px;
+      }
+    }
+    .qrcode-popover.top .qrcode-content:after{
+    	border-top-color: transparent;
+    }
 	}
 }
 .openCourse-panel{
