--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/Mobile/open-course-show.html.twig
@@ -10,7 +10,7 @@
       <div class="container openCourse-container">
         {% include 'TopxiaWebBundle:OpenCourse/Mobile:open-course.html.twig' %}
         <div class="openCourse-wechat-qrcode">
-          <img src="" alt="">
+          <img src="{{ qrcode_data_uri(app.request.uri) }}">
           <p class="text-center color-gray text-sm">微信扫一扫</p>
         </div>
       </div>
